# ROS2-OpenCV-Docker-Computer-Vision-Project

./: Dockerfile  README.md  check_camera.sh  docker-compose.yml  openCV_video_capture.py
video_capture/: package.xml  setup.cfg  setup.py
video_capture/config/: ros2_opencv_config.rviz
video_capture/launch/: image_processing.launch.py
video_capture/video_capture/: capture_node.py  process_node.py  resize_node.py
