<?xml version="1.0"?>
<package format="3">
  <name>video_capture</name>
  <version>0.1.0</version>
  <description>ROS 2 package for video capture with OpenCV</description>
  <maintainer email="your_email@example.com">Affan</maintainer>
  <license>Apache License 2.0</license>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  
  <depend>rclpy</depend>
  <depend>cv2_bridge</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>






